--- a/index.html
+++ b/index.html
@@ -187,15 +187,26 @@
                 <div id="courses" style="height:300px"></div>
               </div>
             </div>
-            <div class="col-lg-6 mb-4">
-              <div class="border rounded-3 p-3 pb-0">
-                <h5 class="mb-4">4 Pilihan Moda Pelatihan</h5>
-                <p class="p-1 text-secondary">Moda pelatihan yang dapat dipilih penerima Prakerja :</p><img class="mw-100" src="../img/phone.webp" alt="">
-              </div>
+          </div>
+          <div class="row">
+            <div class="col-12">
+              <h5 class="mb-4">Moda Pelatihan</h5>
             </div>
-            <div class="col-lg-6 mb-4">
-              <div class="border rounded-3 p-3">
-                <h5 class="mb-4">Moda Pelatihan</h5><span class="skeleton-box w-100 rounded" style="height:300px"></span>
+            <div class="col-lg-6 mb-4"><span class="skeleton-box w-100 rounded" style="height:300px"></span></div>
+            <div class="col-lg-6 mb-4"> 
+              <div class="row"> 
+                <div class="col-12"> 
+                  <p>Total Pelatihan</p>
+                </div>
+                <div class="col-lg-4">
+                  <p>Webinar</p>
+                </div>
+                <div class="col-lg-4"> 
+                  <p>Pembelajaran Mandiri</p>
+                </div>
+                <div class="col-lg-4">
+                  <p>Luring</p>
+                </div>
               </div>
             </div>
             <div class="col-lg-12 mb-4">
