add content moda pelatihan

--- a/index.html
+++ b/index.html
@@ -190,25 +190,53 @@
           </div>
           <div class="row">
             <div class="col-12">
-              <h5 class="mb-4">Moda Pelatihan</h5>
+              <h5 class="mb-4 text-center">Moda Pelatihan</h5>
             </div>
-            <div class="col-lg-6 mb-4"><span class="skeleton-box w-100 rounded" style="height:300px"></span></div>
+            <div class="col-lg-6 mb-4">
+              <div id="course-preference" style="height:300px"></div>
+            </div>
             <div class="col-lg-6 mb-4"> 
               <div class="row"> 
-                <div class="col-12"> 
-                  <p>Total Pelatihan</p>
+                <div class="col-12 mb-lg-4 mb-3">
+                  <div class="border p-3 d-flex gap-3 rounded bg-white">
+                    <div> <i class="bi bi-view-list fs-3 text-primary"></i></div>
+                    <div> 
+                      <h5 class="fs-3">14.433</h5>
+                      <p class="m-0">Total Pelatihan</p>
+                    </div>
+                  </div>
                 </div>
-                <div class="col-lg-4">
-                  <p>Webinar</p>
+                <div class="col-lg-4 mb-3">
+                  <div class="border p-3 d-flex gap-3 rounded h-100 bg-white">
+                    <div> <i class="bi bi-person-video2 fs-4 text-primary"></i></div>
+                    <div> 
+                      <h5 class="fs-4">1.203</h5>
+                      <p class="m-0">Webinar</p>
+                    </div>
+                  </div>
                 </div>
-                <div class="col-lg-4"> 
-                  <p>Pembelajaran Mandiri</p>
+                <div class="col-lg-4 mb-3">
+                  <div class="border p-3 d-flex gap-3 rounded h-100 bg-white">
+                    <div> <i class="bi bi-person-video3 fs-4 text-primary"></i></div>
+                    <div> 
+                      <h5 class="fs-4">3.200</h5>
+                      <p class="m-0">Pembelajaran Mandiri</p>
+                    </div>
+                  </div>
                 </div>
-                <div class="col-lg-4">
-                  <p>Luring</p>
+                <div class="col-lg-4 mb-3">
+                  <div class="border p-3 d-flex gap-3 rounded h-100 bg-white">
+                    <div> <i class="bi bi-easel2 fs-4 text-primary"></i></div>
+                    <div> 
+                      <h5 class="fs-4">300</h5>
+                      <p class="m-0">Luring</p>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
+          </div>
+          <div class="row">
             <div class="col-lg-12 mb-4">
               <h5 class="my-4">Kategori Pelatihan Terbanyak</h5><span class="skeleton-box w-100 rounded" style="height:300px"></span>
             </div>
