--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@
           </div>
           <div class="row">
             <div class="col-lg-12 mb-4">
-              <h5 class="my-4">Kategori Pelatihan Terbanyak</h5><span class="skeleton-box w-100 rounded" style="height:300px"></span>
+              <h5 class="my-4">Kategori Pelatihan Terbanyak</h5>
+              <div id="course-category" style="height:600px"></div>
             </div>
             <div class="col-lg-12 mb-4">
               <h5 class="mb-4">Kategori Pilihan Paling Diminati</h5>
