update items for course category

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
               <div id="course-preference" style="height:300px"></div>
             </div>
             <div class="col-lg-6 mb-4"> 
-              <div class="row"> 
+              <div class="row" id="course-preference-numbers">
                 <div class="col-12 mb-lg-4 mb-3">
                   <div class="border p-3 d-flex gap-3 rounded bg-white">
                     <div> <i class="bi bi-view-list fs-3 text-primary"></i></div>
@@ -243,38 +243,7 @@
             </div>
             <div class="col-lg-12 mb-4">
               <h5 class="mb-4">Kategori Pilihan Paling Diminati</h5>
-              <div class="row px-3">
-                <div class="col-6 col-lg-20 col-md-6 p-4 align-items-end p-3 text-start"><i class="bi bi-shop mb-3 fs-1 text-primary"></i>
-                  <h6>Penjualan & Pemasaran</h6>
-                </div>
-                <div class="col-6 col-lg-20 col-md-6 p-4 align-items-end p-3 text-start"><i class="bi bi-luggage mb-3 fs-1 text-primary"></i>
-                  <h6>Gaya Hidup</h6>
-                </div>
-                <div class="col-6 col-lg-20 col-md-6 p-4 align-items-end p-3 text-start"><i class="bi bi-cup-straw mb-3 fs-1 text-primary"></i>
-                  <h6>Makanan dan Minuman</h6>
-                </div>
-                <div class="col-6 col-lg-20 col-md-6 p-4 align-items-end p-3 text-start"><i class="bi bi-diagram-2 mb-3 fs-1 text-primary"></i>
-                  <h6>Manajemen</h6>
-                </div>
-                <div class="col-12 col-lg-20 col-md-6 p-4 align-items-end p-3 text-start"><i class="bi bi-wrench-adjustable-circle mb-3 fs-1 text-primary"></i>
-                  <h6>Teknik</h6>
-                </div>
-                <div class="col-6 col-lg-20 col-md-6 p-4 align-items-end p-3 text-start"><i class="bi bi-layers mb-3 fs-1 text-primary"></i>
-                  <h6>Ritel/Perdagangan</h6>
-                </div>
-                <div class="col-6 col-lg-20 col-md-6 p-4 align-items-end p-3 text-start"><i class="bi bi-tools mb-3 fs-1 text-primary"></i>
-                  <h6>Pemeliharaan, Perbaikan, Servis</h6>
-                </div>
-                <div class="col-6 col-lg-20 col-md-6 p-4 align-items-end p-3 text-start"><i class="bi bi-car-front mb-3 fs-1 text-primary"></i>
-                  <h6>Otomotif</h6>
-                </div>
-                <div class="col-6 col-lg-20 col-md-6 p-4 align-items-end p-3 text-start"><i class="bi bi-water mb-3 fs-1 text-primary"></i>
-                  <h6>Perikanan</h6>
-                </div>
-                <div class="col-12 col-lg-20 col-md-6 p-4 align-items-end p-3 text-start"><i class="bi bi-boxes mb-3 fs-1 text-primary"></i>
-                  <h6>Operasi, Gudang</h6>
-                </div>
-              </div>
+              <div class="row px-3" id="course-category-list"></div>
             </div>
           </div>
         </div>
