--- a/index.html
+++ b/index.html
@@ -238,12 +238,12 @@
           </div>
           <div class="row">
             <div class="col-lg-12 mb-4">
-              <h5 class="my-4">Kategori Pelatihan Terbanyak</h5>
+              <h5>Kategori Pelatihan Terbanyak</h5>
               <div id="course-category" style="height:600px"></div>
             </div>
             <div class="col-lg-12 mb-4">
-              <h5 class="mb-4">Kategori Pilihan Paling Diminati</h5>
-              <div class="row px-3" id="course-category-list"></div>
+              <h5 class="mb-4 text-center">Kategori Pilihan Paling Diminati</h5>
+              <div class="row" id="course-category-list"></div>
             </div>
           </div>
         </div>
