handle for city and update function

--- a/html/provinsi/section_main_content.html
+++ b/html/provinsi/section_main_content.html
@@ -26,7 +26,7 @@
                 <p class="fs-7 mt-2">Provinsi Jambi berada di peringkat ke-17 penerima terbanyak Prakerja dari 38 provinsi selama periode 2020-2024 (per Juli 2024)</p>
               </div>
               <div class="col-lg-8 bg-s100 p-4" style="min-height:320px"> 
-                <p>Map Canvas </p>
+                <div id="maps-province"></div>
               </div>
             </div>
           </div>
