--- a/index.html
+++ b/index.html
@@ -188,6 +188,10 @@
               </div>
             </div>
           </div>
+        </div>
+      </section>
+      <section class="section-course py-3 py-lg-5">
+        <div class="container px-4 px-md-0">
           <div class="row">
             <div class="col-12">
               <h5 class="mb-4 text-center">Moda Pelatihan</h5>
