--- a/provinsi/index.html
+++ b/provinsi/index.html
@@ -51,7 +51,7 @@
             </li>
             <li class="nav-item md-hide disable-hover">
               <div class="input-group custom-search-2 search-only">
-                <input class="form-control" id="autoComplete" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Cari provinsi / kabupaten..." type="search" dir="ltr" autocorrect="off" autocomplete="off" autocapitalize="off" maxlength="2048" tabindex="1">
+                <input class="form-control" id="autoComplete" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Cari provinsi / kabupaten..." type="search" dir="ltr" autocorrect="off" autocomplete="off" autocapitalize="off" maxlength="2048" tabindex="1" style="width:100%">
               </div>
             </li>
           </ul>
@@ -66,7 +66,7 @@
               <ol class="breadcrumb overflow-hidden fs-7 mb-0">
                 <li class="breadcrumb-item"><a href="/"><i class="bi bi-house-door"></i></a></li>
                 <li class="breadcrumb-item"><a href="/jambi">Jambi </a></li>
-                <li class="breadcrumb-item active text-truncate">Semua Kabupaten</li>
+                <li class="breadcrumb-item active">Semua Kabupaten</li>
               </ol>
             </ol>
           </nav>
@@ -93,41 +93,6 @@
             </div>
             <div class="col-lg-8 bg-s100 p-4" style="min-height:320px"> 
               <div id="maps-province"></div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="section-course py-4 pt-lg-5">
-        <div class="container px-4 px-md-0">
-          <div class="row text-center">
-            <h4 class="custom-rfs-h4">Persebaran Penerima</h4>
-            <p>Data berasal dari seluruh Indonesia tahun 2020-2024 dengan skema Semi Bansos dan Skema Normal (Gelombang 1-69).</p>
-            <div class="overflow-x-scroll">
-              <table class="table table-hover fs-7 my-4 display dataTable" id="tablePersebaran">
-                <thead>
-                  <tr>
-                    <th rowspan="2">Provinsi</th>
-                    <th colspan="2">2020</th>
-                    <th colspan="2">2021</th>
-                    <th colspan="2">2022</th>
-                    <th colspan="2">2023</th>
-                    <th colspan="2">2024</th>
-                  </tr>
-                  <tr>
-                    <td>SK Penetapan      </td>
-                    <td>Aktif</td>
-                    <td>SK Penetapan      </td>
-                    <td>Aktif </td>
-                    <td>SK Penetapan      </td>
-                    <td>Aktif </td>
-                    <td>SK Penetapan      </td>
-                    <td>Aktif </td>
-                    <td>SK Penetapan      </td>
-                    <td>Aktif  </td>
-                  </tr>
-                  <tbody rowspan="1" colspan="11"></tbody>
-                </thead>
-              </table>
             </div>
           </div>
         </div>
