--- a/tanyajawab/index.html
+++ b/tanyajawab/index.html
@@ -30,9 +30,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&amp;family=Poppins:wght@600;700;900&amp;display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"/>
     <link rel="stylesheet" href="https://cdn.datatables.net/2.1.4/css/dataTables.bootstrap5.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.min.css"/>
     <link rel="stylesheet" href="../css/bootstrap.css"/>
     <link rel="stylesheet" href="../css/pds-penerima.css"/>
+    <link rel="stylesheet" href="../css/autoComplete.css"/>
     <link rel="stylesheet" href="../css/owl.carousel.css"/>
     <!-- Google Tag Manager-->
   </head>
@@ -51,7 +51,7 @@
             </li>
             <li class="nav-item md-hide disable-hover">
               <div class="input-group custom-search-2 search-only">
-                <input class="form-control" id="autoComplete" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Cari provinsi / kabupaten..." type="search" dir="ltr" autocorrect="off" autocomplete="off" autocapitalize="off" maxlength="2048" tabindex="1"/>
+                <input class="form-control" id="autoComplete" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Cari provinsi / kabupaten..." type="search" dir="ltr" autocorrect="off" autocomplete="off" autocapitalize="off" maxlength="2048" tabindex="1" style="width:100%"/>
               </div>
             </li>
           </ul>
