fix merge conflict

--- a/html/kabupaten/section_main_content.html
+++ b/html/kabupaten/section_main_content.html
@@ -11,7 +11,7 @@
             <div class="row d-flex flex-row-reverse">
               <div class="col-lg-4 bg-s200 p-4">
                 <div>
-                  <div class="h6">Provinsi</div>
+                  <div class="h6">Kabupaten</div>
                   <h1 class="province-name">Memuat Data </h1>
                   <div class="island-name h6 text-secondary">Memuat Data</div>
                 </div>
@@ -25,8 +25,8 @@
                 </div>
                 <p class="fs-7 mt-2 narasi">Memuat Data</p>
               </div>
-              <div class="col-lg-8 bg-s100 p-4" style="min-height:320px"> 
-                <div id="maps-province"></div>
+              <div class="col-lg-8 bg-s100 p-4" style="min-height:420px"> 
+                <div id="maps-regency"></div>
               </div>
             </div>
           </div>
