--- a/kabupaten/index.html
+++ b/kabupaten/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://www.prakerja.go.id/favicon.ico" rel="shortcut icon">
-    <title>Provinsi ABC - prakerja.go.id</title>
+    <title>Kabupaten - prakerja.go.id</title>
     <meta name="description" content="Informasi statistik penerima prakerja selama periode 2020 - 2024.">
     <link rel="canonical" href="https://statistik-penerima.prakerja.go.id">
     <link rel="alternate" hreflang="id" href="https://statistik-penerima.prakerja.go.id">
@@ -18,7 +18,7 @@
     <meta property="og:url" content="https://raw.githubusercontent.com/Kartu-Prakerja/laporan-penerima/main/img/img-cover-statistik-prakerja.png">
     <meta name="twitter:card" content="https://raw.githubusercontent.com/Kartu-Prakerja/laporan-penerima/main/img/img-cover-statistik-prakerja.png">
     <meta name="twitter:site" content="">
-    <meta name="twitter:title" content="Provinsi ABC - prakerja.go.id">
+    <meta name="twitter:title" content="Kabupaten - prakerja.go.id">
     <meta name="twitter:description" content="Informasi statistik penerima prakerja selama periode 2020 - 2024.">
     <meta name="twitter:image" content="https://raw.githubusercontent.com/Kartu-Prakerja/laporan-penerima/main/img/img-cover-statistik-prakerja.png">
     <meta name="twitter:image:width" content="1200">
@@ -75,7 +75,7 @@
           <div class="row d-flex flex-row-reverse">
             <div class="col-lg-4 bg-s200 p-4">
               <div>
-                <div class="h6">Provinsi</div>
+                <div class="h6">Kabupaten</div>
                 <h1 class="province-name">Memuat Data </h1>
                 <div class="island-name h6 text-secondary">Memuat Data</div>
               </div>
@@ -89,8 +89,8 @@
               </div>
               <p class="fs-7 mt-2 narasi">Memuat Data</p>
             </div>
-            <div class="col-lg-8 bg-s100 p-4" style="min-height:320px"> 
-              <div id="maps-province"></div>
+            <div class="col-lg-8 bg-s100 p-4" style="min-height:420px"> 
+              <div id="maps-regency"></div>
             </div>
           </div>
         </div>
@@ -104,7 +104,7 @@
               <table class="table table-hover fs-7 my-4 display dataTable" id="tablePersebaran">
                 <thead>
                   <tr>
-                    <th rowspan="2">Kota / Kabupaten</th>
+                    <th rowspan="2">Kecamatan</th>
                     <th colspan="2">2020</th>
                     <th colspan="2">2021</th>
                     <th colspan="2">2022</th>
