update for province and regency info

--- a/kabupaten/index.html
+++ b/kabupaten/index.html
@@ -148,7 +148,7 @@
               <div class="border p-4 d-flex rounded-3 mb-4 bg-map-indonesia h-100 align-items-center">
                 <div class="text-start">
                   <h6 class="h1 text-primary">100%</h6>
-                  <p class="mb-0">Mencakup seluruh wilayah provinsi, kabupaten/kota, dan kecamatan di Indonesia.</p>
+                  <p class="mb-0">Mencakup seluruh wilayah kecamatan di Kabupaten/Kota <b class="province-name"></b>.</p>
                 </div>
               </div>
             </div>
