--- a/html/kabupaten/section_main_content.html
+++ b/html/kabupaten/section_main_content.html
@@ -35,223 +35,41 @@
             </div>
           </div>
         </section>
-        <section class="pt-3">
-          <div class="container"> 
-            <h4 class="mb-0">Profil Penerima Manfaat</h4>
-            <p class="mb-4">Data berasal dari tahun 2020-2024 dan Gelombang 1-69</p>
-            <div class="row mb-4">
-              <div class="col-12 mb-4">
-                <div class="p-2 bg-b100-gradient">
-                  <h5 class="m-0">Jenis Kelamin</h5>
+        <section class="section-course py-3 py-lg-5">
+          <div class="container px-4 px-md-0">
+            <div class="row text-center">
+              <h4 class="mb-4 custom-rfs-h4">Profil Penerima</h4>
+              <div class="col-lg-6 d-flex flex-column">
+                <div class="border p-4 d-flex rounded-3 gap-3 mb-4 h-100 align-items-center"><img src="img/img-people.svg" alt=""/>
+                  <div class="text-start">
+                    <h6 class="h1 text-primary" id="total-penerima">18.887.737</h6>
+                    <p class="mb-0">Total Penerima Aktif Program</p>
+                  </div>
+                </div>
+                <div class="border p-4 d-flex rounded-3 mb-4 bg-map-indonesia h-100 align-items-center">
+                  <div class="text-start">
+                    <h6 class="h1 text-primary">100%</h6>
+                    <p class="mb-0">Mencakup seluruh wilayah kecamatan di Kabupaten/Kota <b class="province-name"></b>.</p>
+                  </div>
                 </div>
               </div>
-              <div class="col-lg-6"> <span class="skeleton-box w-100 rounded" style="height:200px"></span></div>
-              <div class="col-lg-6">
-                <table class="table table-hover fs-7">
-                  <thead>
-                    <tr class="table-active">
-                      <th>Jenis Kelamin</th>
-                      <th>Jumlah</th>
-                      <th>Persentase</th>
-                    </tr>
-                  </thead>
-                  <tbody class="table-group-divider">
-                    <tr>
-                      <td>Laki-laki</td>
-                      <td>2.101</td>
-                      <td>48,50%</td>
-                    </tr>
-                    <tr>
-                      <td>Perempuan</td>
-                      <td>2.502</td>
-                      <td>51,50%</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-            <div class="row mb-4">
-              <div class="col-12 mb-4">
-                <div class="p-2 bg-b100-gradient">
-                  <h5 class="m-0">Rentang Umur</h5>
+              <div class="col-lg-6 mb-4">
+                <div class="border p-3 w-100 rounded">
+                  <h5 class="mb-3">Jenis Kelamin</h5>
+                  <div id="gender" style="height:300px"></div>
                 </div>
               </div>
-              <div class="col-lg-6"> <span class="skeleton-box w-100 rounded" style="height:200px"></span></div>
               <div class="col-lg-6">
-                <table class="table table-hover fs-7">
-                  <thead>
-                    <tr class="table-active">
-                      <th>Umur</th>
-                      <th>Jumlah</th>
-                      <th>Persentase</th>
-                    </tr>
-                  </thead>
-                  <tbody class="table-group-divider">
-                    <tr>
-                      <td>18-25</td>
-                      <td>402</td>
-                      <td>18.50%</td>
-                    </tr>
-                    <tr>
-                      <td>26-35</td>
-                      <td>1.204</td>
-                      <td>31,50%</td>
-                    </tr>
-                    <tr>
-                      <td>36-45</td>
-                      <td>1.204</td>
-                      <td>31,50%</td>
-                    </tr>
-                    <tr>
-                      <td>46-55</td>
-                      <td>1.204</td>
-                      <td>31,50%</td>
-                    </tr>
-                    <tr>
-                      <td>56-64</td>
-                      <td>1.204</td>
-                      <td>31,50%</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-            <div class="row mb-4">
-              <div class="col-12 mb-4">
-                <div class="p-2 bg-b100-gradient">
-                  <h5 class="m-0">Pendidikan Terakhir</h5>
+                <div class="border p-3 w-100 rounded">
+                  <h5 class="mb-3">Umur</h5>
+                  <div id="age" style="height:300px"></div>
                 </div>
               </div>
-              <div class="col-lg-6"> <span class="skeleton-box w-100 rounded" style="height:200px"></span></div>
               <div class="col-lg-6">
-                <table class="table table-hover fs-7">
-                  <thead>
-                    <tr class="table-active">
-                      <th>Pendidikan</th>
-                      <th>Jumlah</th>
-                      <th>Persentase</th>
-                    </tr>
-                  </thead>
-                  <tbody class="table-group-divider">
-                    <tr>
-                      <td>SD</td>
-                      <td>402</td>
-                      <td>18.50%</td>
-                    </tr>
-                    <tr>
-                      <td>SMP</td>
-                      <td>1.204</td>
-                      <td>31,50%</td>
-                    </tr>
-                    <tr>
-                      <td>SMA/SMK</td>
-                      <td>1.204</td>
-                      <td>31,50%</td>
-                    </tr>
-                    <tr>
-                      <td>Diploma</td>
-                      <td>1.204</td>
-                      <td>31,50%</td>
-                    </tr>
-                    <tr>
-                      <td>S1</td>
-                      <td>1.204</td>
-                      <td>31,50%</td>
-                    </tr>
-                    <tr>
-                      <td>S2</td>
-                      <td>1.204</td>
-                      <td>31,50%</td>
-                    </tr>
-                    <tr>
-                      <td>S3</td>
-                      <td>1.204</td>
-                      <td>31,50%</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-            <div class="row mb-4">
-              <div class="col-12 mb-4">
-                <div class="p-2 bg-b100-gradient">
-                  <h5 class="m-0">Status Pekerjaan</h5>
+                <div class="border p-3 w-100 rounded">
+                  <h5 class="mb-3">Pendidikan Terakhir</h5>
+                  <div id="lastEdu" style="height:300px"></div>
                 </div>
-              </div>
-              <div class="col-lg-6"> <span class="skeleton-box w-100 rounded" style="height:200px"></span></div>
-              <div class="col-lg-6">
-                <table class="table table-hover fs-7">
-                  <thead>
-                    <tr class="table-active">
-                      <th>Status Pekerjaan</th>
-                      <th>Jumlah</th>
-                      <th>Persentase</th>
-                    </tr>
-                  </thead>
-                  <tbody class="table-group-divider">
-                    <tr>
-                      <td>Bekerja</td>
-                      <td>402</td>
-                      <td>18.50%</td>
-                    </tr>
-                    <tr>
-                      <td>Wirausaha</td>
-                      <td>1.204</td>
-                      <td>31,50%</td>
-                    </tr>
-                    <tr>
-                      <td>Tidak Bekerja</td>
-                      <td>1.204</td>
-                      <td>31,50%</td>
-                    </tr>
-                    <tr>
-                      <td>Pensiunan</td>
-                      <td>1.204</td>
-                      <td>31,50%</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-            <div class="row mb-4">
-              <div class="col-12 mb-4">
-                <div class="p-2 bg-b100-gradient">
-                  <h5 class="m-0">Moda Pelatihan</h5>
-                </div>
-              </div>
-              <div class="col-lg-6"> <span class="skeleton-box w-100 rounded" style="height:200px"></span></div>
-              <div class="col-lg-6">
-                <table class="table table-hover fs-7">
-                  <thead>
-                    <tr class="table-active">
-                      <th>Moda Pelatihan</th>
-                      <th>Jumlah</th>
-                      <th>Persentase</th>
-                    </tr>
-                  </thead>
-                  <tbody class="table-group-divider">
-                    <tr>
-                      <td>Hybrid</td>
-                      <td>402</td>
-                      <td>18.50%</td>
-                    </tr>
-                    <tr>
-                      <td>Self-paced Learning</td>
-                      <td>1.204</td>
-                      <td>31,50%</td>
-                    </tr>
-                    <tr>
-                      <td>Webinar</td>
-                      <td>1.204</td>
-                      <td>31,50%</td>
-                    </tr>
-                    <tr>
-                      <td>Luring</td>
-                      <td>1.204</td>
-                      <td>31,50%</td>
-                    </tr>
-                  </tbody>
-                </table>
               </div>
             </div>
           </div>
