update information for detail regency

--- a/kabupaten/index.html
+++ b/kabupaten/index.html
@@ -75,9 +75,9 @@
           <div class="row d-flex flex-row-reverse">
             <div class="col-lg-4 bg-s200 p-4">
               <div>
-                <div class="h6" id="regency-name">Kabupaten</div>
+                <div class="regency-name h6">Kabupaten</div>
                 <h1 class="text-capitalize" id="city-name">Memuat Data </h1>
-                <div class="h6 text-secondary" id="province-name">Memuat Data</div>
+                <div class="province-name h6 text-secondary">Memuat Data</div>
               </div>
               <hr>
               <p class="text-secondary"> <i>/ fun fact /</i></p>
