--- a/provinsi/index.html
+++ b/provinsi/index.html
@@ -76,18 +76,18 @@
             <div class="col-lg-4 bg-s200 p-4">
               <div>
                 <div class="h6">Provinsi</div>
-                <h1 id="province-name">Memuat Data </h1>
+                <h1 class="province-name">Memuat Data </h1>
                 <div class="h6 text-secondary" id="island-name">Memuat Data</div>
               </div>
               <hr>
               <p class="text-secondary"> <i>/ fun fact /</i></p>
               <div class="d-flex mb-3">
                 <div class="outer-funfact">
-                  <div class="d-inline-flex"><i class="bi bi-mortarboard fs-2 align-self-center"></i><b class="ms-2 h4 mb-0 align-self-center" id="age-workes">32.34%</b></div>
+                  <div class="d-inline-flex"><i class="bi bi-mortarboard fs-2 align-self-center"></i><b class="ms-2 h4 mb-0 align-self-center" id="age-workes">~</b></div>
                   <div class="d-flex"><span class="text-secondary fs-7">Angkatan kerja</span></div>
                 </div>
                 <div class="outer-funfact ms-auto">
-                  <div class="d-inline-flex"><i class="bi bi-activity fs-2 align-self-center"></i><b class="ms-2 h4 mb-0 align-self-center" id="age-productive">32.34%</b></div>
+                  <div class="d-inline-flex"><i class="bi bi-activity fs-2 align-self-center"></i><b class="ms-2 h4 mb-0 align-self-center" id="age-productive">~</b></div>
                   <div class="d-flex"><span class="text-secondary fs-7">Angkatan kerja usia produktif</span></div>
                 </div>
               </div>
