update style map

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <section class="section-hero">
         <h1 class="main-heading h3">
            Statistik Penerima <span>Prakerja </span>2020 - 2024</h1>
-        <div class="container-fluid" id="maps-indonesia"></div>
+        <div class="container-fluid" id="maps-indonesia"></div><span class="scroll-hint">Scroll</span>
       </section>
       <section class="section-course py-4 pt-lg-5">
         <div class="container px-4 px-md-0">
@@ -74,23 +74,23 @@
                 <thead>
                   <tr>
                     <th rowspan="2">Provinsi</th>
-                    <th colspan="2">2020</th>
-                    <th colspan="2">2021</th>
-                    <th colspan="2">2022</th>
-                    <th colspan="2">2023</th>
-                    <th colspan="2">2024</th>
+                    <th class="text-center" colspan="2">2020</th>
+                    <th class="text-center" colspan="2">2021</th>
+                    <th class="text-center" colspan="2">2022</th>
+                    <th class="text-center" colspan="2">2023</th>
+                    <th class="text-center" colspan="2">2024</th>
                   </tr>
                   <tr>
-                    <td>SK Penetapan      </td>
-                    <td>Aktif</td>
-                    <td>SK Penetapan      </td>
-                    <td>Aktif </td>
-                    <td>SK Penetapan      </td>
-                    <td>Aktif </td>
-                    <td>SK Penetapan      </td>
-                    <td>Aktif </td>
-                    <td>SK Penetapan      </td>
-                    <td>Aktif  </td>
+                    <td class="text-end">SK Penetapan      </td>
+                    <td class="text-end">Aktif</td>
+                    <td class="text-end">SK Penetapan      </td>
+                    <td class="text-end">Aktif </td>
+                    <td class="text-end">SK Penetapan      </td>
+                    <td class="text-end">Aktif </td>
+                    <td class="text-end">SK Penetapan      </td>
+                    <td class="text-end">Aktif </td>
+                    <td class="text-end">SK Penetapan      </td>
+                    <td class="text-end">Aktif  </td>
                   </tr>
                   <tbody rowspan="1" colspan="11"></tbody>
                 </thead>
