--- a/kabupaten/index.html
+++ b/kabupaten/index.html
@@ -109,11 +109,11 @@
                 <thead>
                   <tr>
                     <th rowspan="2">Kecamatan</th>
-                    <th colspan="2">2020</th>
-                    <th colspan="2">2021</th>
-                    <th colspan="2">2022</th>
-                    <th colspan="2">2023</th>
-                    <th colspan="2">2024</th>
+                    <th class="text-center" colspan="2">2020</th>
+                    <th class="text-center" colspan="2">2021</th>
+                    <th class="text-center" colspan="2">2022</th>
+                    <th class="text-center" colspan="2">2023</th>
+                    <th class="text-center" colspan="2">2024</th>
                   </tr>
                   <tr>
                     <td>SK Penetapan      </td>
