--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <h4 class="custom-rfs-h4">Persebaran Penerima</h4>
             <p>Data berasal dari seluruh Indonesia tahun 2020-2024 dengan skema Semi Bansos dan Skema Normal (Gelombang 1-69).</p>
             <div class="overflow-x-scroll">
-              <table class="table table-hover fs-7 my-4 display dataTable" id="tablePersebaran">
+              <table class="table table-hover fs-7 my-4 display dataTable table-mobile-xxs" id="tablePersebaran">
                 <thead>
                   <tr>
                     <th rowspan="2">Provinsi</th>
