update based on feedbacks

--- a/index.html
+++ b/index.html
@@ -118,19 +118,19 @@
               </div>
             </div>
             <div class="col-lg-6 mb-4">
-              <div class="border p-3 w-100 rounded">
+              <div class="border p-3 w-100 rounded-3">
                 <h5 class="mb-3">Jenis Kelamin</h5>
                 <div id="gender" style="height:300px"></div>
               </div>
             </div>
             <div class="col-lg-6">
-              <div class="border p-3 w-100 rounded">
+              <div class="border p-3 w-100 rounded-3">
                 <h5 class="mb-3">Umur</h5>
                 <div id="age" style="height:300px"></div>
               </div>
             </div>
             <div class="col-lg-6">
-              <div class="border p-3 w-100 rounded">
+              <div class="border p-3 w-100 rounded-3">
                 <h5 class="mb-3">Pendidikan Terakhir</h5>
                 <div id="lastEdu" style="height:300px"></div>
               </div>
