--- a/kabupaten/index.html
+++ b/kabupaten/index.html
@@ -76,22 +76,23 @@
             <div class="col-lg-4 bg-s200 p-4">
               <div>
                 <div class="regency-name h6">Kabupaten</div>
-                <h1 class="text-capitalize" id="city-name">Memuat Data </h1>
+                <h1 class="city-name text-capitalize">Memuat Data </h1>
                 <div class="province-name h6 text-secondary">Memuat Data</div>
               </div>
               <hr>
               <p class="text-secondary"> <i>/ fun fact /</i></p>
               <div class="d-flex">
-                <div class="outer-funfact">
-                  <div class="d-inline-flex"><i class="bi bi-mortarboard fs-2 align-self-center"></i><b class="ms-2 h4 mb-0 align-self-center" id="age-workes">~</b></div>
+                <div class="outer-funfact w-100">
+                  <div class="d-inline-flex"><i class="bi bi-briefcase fs-2 align-self-center"></i><b class="ms-2 h4 mb-0 align-self-center" id="age-workes">~</b></div>
                   <div class="d-flex"><span class="text-secondary fs-7">Angkatan kerja</span></div>
                 </div>
-                <div class="outer-funfact ms-auto">
-                  <div class="d-inline-flex"><i class="bi bi-activity fs-2 align-self-center"></i><b class="ms-2 h4 mb-0 align-self-center" id="age-productive">~</b></div>
-                  <div class="d-flex"><span class="text-secondary fs-7">Angkatan kerja usia produktif</span></div>
+                <div class="outer-funfact ms-auto w-100">
+                  <div class="d-inline-flex"><i class="bi bi-activity fs-2 align-self-center"></i><b class="ms-2 h4 mb-0 align-self-center" id="percent-recipient"></b><b class="h4 align-self-center"> %</b></div>
+                  <div class="d-flex"><span class="text-secondary fs-7">Penerima Prakerja</span></div>
                 </div>
               </div>
-              <p class="fs-7 mt-2 narasi">Berdasarkan data BPS (Feb 2024), sebanyak <span id="total-recipient">0</span> Orang atau setara <span id="percent-recipient">0.0</span>% dari <span id="total-workers">0</span> Jumlah Angkatan Kerja yang Pernah Mengikuti Pelatihan di Prakerja.</p>
+              <p class="fs-7 mt-3 narasi">
+                 Sebanyak <span id="total-recipient">0 </span> orang dari <span id="total-workers">0 </span> angkatan kerja di Kabupaten/Kota <span class="city-name text-capitalize">0 </span> pernah mengikuti pelatihan di Prakerja. Angka jumlah Angkatan Kerja diambil menurut data BPS per Februari 2024.</p>
             </div>
             <div class="col-lg-8 bg-s100 p-4" style="min-height:420px"> 
               <div id="maps-regency"></div>
@@ -153,19 +154,19 @@
               </div>
             </div>
             <div class="col-lg-6 mb-4">
-              <div class="border p-3 w-100 rounded">
+              <div class="border p-3 w-100 rounded-3">
                 <h5 class="mb-3">Jenis Kelamin</h5>
                 <div id="gender" style="height:300px"></div>
               </div>
             </div>
             <div class="col-lg-6">
-              <div class="border p-3 w-100 rounded">
+              <div class="border p-3 w-100 rounded-3">
                 <h5 class="mb-3">Umur</h5>
                 <div id="age" style="height:300px"></div>
               </div>
             </div>
             <div class="col-lg-6">
-              <div class="border p-3 w-100 rounded">
+              <div class="border p-3 w-100 rounded-3">
                 <h5 class="mb-3">Pendidikan Terakhir</h5>
                 <div id="lastEdu" style="height:300px"></div>
               </div>
