--- a/index.html
+++ b/index.html
@@ -240,13 +240,17 @@
               </div>
             </div>
           </div>
+        </div>
+      </section>
+      <section class="section-course py-3 py-lg-5">
+        <div class="container px-4 px-md-0">
           <div class="row">
             <div class="col-lg-12 mb-4">
-              <h5>Kategori Pelatihan Terbanyak</h5>
+              <h5 class="mb-3 text-center">Kategori Pelatihan Terbanyak</h5>
               <div id="course-category" style="height:600px"></div>
             </div>
             <div class="col-lg-12 mb-4">
-              <h5 class="mb-4 text-center">Kategori Pilihan Paling Diminati</h5>
+              <h5 class="mb-4 text-center">10 Kategori Pilihan Paling Diminati</h5>
               <div class="row" id="course-category-list"></div>
             </div>
           </div>
