--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
       <section class="section-hero">
         <h1 class="main-heading h3">
            Statistik Penerima <span>Prakerja </span>2020 - 2024</h1>
-        <div class="container-fluid" id="maps-indonesia"></div><span class="scroll-hint">Scroll</span>
+        <div class="container-fluid" id="maps-indonesia"></div>
+        <div class="mouse"> 
+          <div class="scoll"></div>
+        </div>
       </section>
       <section class="section-course py-4 pt-lg-5">
         <div class="container px-4 px-md-0">
@@ -197,7 +200,9 @@
               <h5 class="mb-4 text-center">Moda Pelatihan</h5>
             </div>
             <div class="col-lg-6 mb-4">
-              <div id="course-preference" style="height:300px"></div>
+              <div class="border rounded-3 p-3">
+                <div id="course-preference" style="height:300px"></div>
+              </div>
             </div>
             <div class="col-lg-6 mb-4"> 
               <div class="row" id="course-preference-numbers">
