--- a/kabupaten/index.html
+++ b/kabupaten/index.html
@@ -181,7 +181,9 @@
               <h5 class="mb-4 text-center">Moda Pelatihan</h5>
             </div>
             <div class="col-lg-6 mb-4">
-              <div id="course-preference" style="height:300px"></div>
+              <div class="border rounded-3 p-3">
+                <div id="course-preference" style="height:300px"></div>
+              </div>
             </div>
             <div class="col-lg-6 mb-4"> 
               <div class="row" id="course-preference-numbers">
