update mobile view page kabupaten / kota

--- a/kabupaten/index.html
+++ b/kabupaten/index.html
@@ -72,7 +72,10 @@
       </section>
       <section class="section-course">
         <div class="container"> 
-          <div class="row d-flex flex-row-reverse">
+          <div class="row d-flex flex-reverse">
+            <div class="col-lg-8 bg-s100 p-4" style="min-height:420px"> 
+              <div id="maps-regency"></div>
+            </div>
             <div class="col-lg-4 bg-s200 p-4">
               <div>
                 <div class="regency-name h6">Kabupaten</div>
@@ -93,9 +96,6 @@
               </div>
               <p class="fs-7 mt-3 narasi">
                  Sebanyak <span id="total-recipient">0 </span> orang dari <span id="total-workers">0 </span> angkatan kerja di Kabupaten/Kota <span class="city-name text-capitalize">0 </span> pernah mengikuti pelatihan di Prakerja. Angka jumlah Angkatan Kerja diambil menurut data BPS per Februari 2024.</p>
-            </div>
-            <div class="col-lg-8 bg-s100 p-4" style="min-height:420px"> 
-              <div id="maps-regency"></div>
             </div>
           </div>
         </div>
