update view for mobile preview

--- a/html/provinsi/section_main_content.html
+++ b/html/provinsi/section_main_content.html
@@ -9,7 +9,7 @@
         <section class="section-course">
           <div class="container"> 
             <div class="row d-flex flex-reverse">
-              <div class="col-12 col-lg-8 bg-s100 p-4" style="min-height:320px"> 
+              <div class="col-12 col-lg-8 bg-s100 p-4 map-province" style="min-height:320px"> 
                 <div id="maps-province"></div>
               </div>
               <div class="col-12 col-lg-4 bg-s200 p-4">
