--- a/provinsi/index.html
+++ b/provinsi/index.html
@@ -35,10 +35,21 @@
     <link rel="stylesheet" href="../css/autoComplete.css">
     <link rel="stylesheet" href="../css/owl.carousel.css">
     <!-- Google Tag Manager-->
-  </head>
+    <script>
+      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-5N937CVR');
+    </script>
+  </head><!-- End Google Tag Manager -->
   <body>
     <!-- Google Tag Manager (noscript)-->
-    <noscript></noscript>
+    <noscript>
+      <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5N937CVR" height="0" width="0" style="display:none;visibility:hidden">
+        <!-- End Google Tag Manager (noscript)-->
+      </iframe>
+    </noscript>
     <header class="pdt-header">
       <div class="container-md px-4 px-md-0">
         <div class="d-flex justify-content-between align-items-center position-relative">
@@ -104,7 +115,7 @@
         <div class="container px-4 px-md-0">
           <div class="row text-center">
             <h4 class="custom-rfs-h4">Persebaran Penerima</h4>
-            <p>Data berasal dari seluruh Indonesia tahun 2020-2024 dengan skema Semi Bansos dan Skema Normal (Gelombang 1-69).</p>
+            <p>Data berasal dari seluruh Indonesia tahun 2020-2024 dengan skema Semi Bansos dan Skema Normal.</p>
             <div class="overflow-x-scroll">
               <table class="table table-hover fs-7 my-4 display dataTable table-mobile-xxs" id="tablePersebaran">
                 <thead>
@@ -232,20 +243,15 @@
         <div class="container px-4 px-md-0">
           <div class="row">
             <div class="col-lg-12 mb-4">
-              <h5 class="mb-3 text-center">Kategori Pelatihan Terbanyak</h5>
-              <div id="course-category" style="height:600px"></div>
-            </div>
-            <div class="col-lg-12 mb-4">
-              <h5 class="mb-4 text-center">10 Kategori Pilihan Paling Diminati</h5>
-              <div class="row" id="course-category-list"></div>
+              <h5 class="mb-3 text-center">Jumlah Peserta Per Kategori Pelatihan</h5>
+              <div id="course-category" style="height:1000px"></div>
             </div>
           </div>
         </div>
       </section>
-      <section class="section-course py-3 py-lg-5">
+      <section class="section-course py-3">
         <div class="container px-4 px-md-0">
           <div class="row text-center">
-            <h4 class="mb-4">Insentif</h4>
             <div class="col-lg-12 mb-4">
               <h5>Rekening Penerimaan Insentif</h5>
               <div id="rekeningPenerimaanInsentif" style="height:300px"></div>
