update information for map regency

--- a/kabupaten/index.html
+++ b/kabupaten/index.html
@@ -100,12 +100,12 @@
                   <div class="d-flex"><span class="text-secondary fs-7">Angkatan kerja</span></div>
                 </div>
                 <div class="outer-funfact ms-auto w-100">
-                  <div class="d-inline-flex"><i class="bi bi-activity fs-2 align-self-center"></i><b class="ms-2 h4 mb-0 align-self-center" id="percent-recipient"></b><b class="h4 align-self-center"> %</b></div>
+                  <div class="d-inline-flex"><i class="bi bi-people fs-2 align-self-center"></i><b class="ms-2 h4 mb-0 align-self-center" id="percent-recipient"></b><b class="h4 align-self-center"> %</b></div>
                   <div class="d-flex"><span class="text-secondary fs-7">Penerima Prakerja</span></div>
                 </div>
               </div>
               <p class="fs-7 mt-3 narasi">
-                 Sebanyak <span id="total-recipient">0 </span> orang dari <span id="total-workers">0 </span> angkatan kerja di Kabupaten/Kota <span class="city-name text-capitalize">0 </span> pernah mengikuti pelatihan di Prakerja. Angka jumlah Angkatan Kerja diambil menurut data BPS per Februari 2024.</p>
+                 Sebanyak <span class="fw-bold" id="total-recipient">0 </span> orang dari <span class="fw-bold" id="total-workers">0 </span> angkatan kerja di Provinsi <span class="province-name text-capitalize fw-bold">~  </span> pernah mengikuti pelatihan di Prakerja. Angka jumlah Angkatan Kerja diambil menurut data <i>BPS per Februari 2024</i>.</p>
             </div>
           </div>
         </div>
