--- a/html/provinsi/section_main_content.html
+++ b/html/provinsi/section_main_content.html
@@ -19,19 +19,18 @@
                   <div class="h6 text-secondary" id="island-name">Memuat Data</div>
                 </div>
                 <hr/>
-                <p class="text-secondary"> <i>/ fun fact /</i></p>
                 <div class="d-flex mb-3">
                   <div class="outer-funfact w-100">
                     <div class="d-inline-flex"><i class="bi bi-briefcase fs-2 align-self-center"></i><b class="ms-2 h4 mb-0 align-self-center" id="age-workes">~</b></div>
                     <div class="d-flex"><span class="text-secondary fs-7">Angkatan kerja</span></div>
                   </div>
                   <div class="outer-funfact ms-auto w-100">
-                    <div class="d-inline-flex"><i class="bi bi-activity fs-2 align-self-center"></i><b class="ms-2 h4 mb-0 align-self-center" id="percent-recipient"></b><b class="h4 align-self-center"> %</b></div>
+                    <div class="d-inline-flex"><i class="bi bi-people fs-2 align-self-center"></i><b class="ms-2 h4 mb-0 align-self-center" id="percent-recipient"></b><b class="h4 align-self-center">%</b></div>
                     <div class="d-flex"><span class="text-secondary fs-7">Penerima Prakerja</span></div>
                   </div>
                 </div>
                 <p class="fs-7 mt-3 narasi">
-                   Sebanyak <span id="total-recipient">0 </span> orang dari <span id="total-workers">0 </span> angkatan kerja di Provinsi <span id="province-name">0 </span> pernah mengikuti pelatihan di Prakerja. Angka jumlah Angkatan Kerja diambil menurut data BPS per Februari 2024.</p>
+                   Sebanyak <span class="fw-bold" id="total-recipient">0 </span> orang dari <span class="fw-bold" id="total-workers">0 </span> angkatan kerja di Provinsi <span class="fw-bold" id="province-name">0 </span> pernah mengikuti pelatihan di Prakerja. Angka jumlah Angkatan Kerja diambil menurut data <i>BPS per Februari 2024</i>.</p>
               </div>
             </div>
           </div>
