add heading header

--- a/tanyajawab/index.html
+++ b/tanyajawab/index.html
@@ -35,14 +35,26 @@
     <link rel="stylesheet" href="../css/autoComplete.css"/>
     <link rel="stylesheet" href="../css/owl.carousel.css"/>
     <!-- Google Tag Manager-->
-  </head>
+    <script>
+      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-5N937CVR');
+    </script>
+  </head><!-- End Google Tag Manager -->
   <body>
     <!-- Google Tag Manager (noscript)-->
-    <noscript></noscript>
+    <noscript>
+      <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5N937CVR" height="0" width="0" style="display:none;visibility:hidden">
+        <!-- End Google Tag Manager (noscript)-->
+      </iframe>
+    </noscript>
     <header class="pdt-header">
       <div class="container-md px-4 px-md-0">
         <div class="d-flex justify-content-between align-items-center position-relative">
-          <div class="d-flex justify-content-between align-items-center col-12 col-lg-auto"><a href="../index.html"><img src="../img/logo-prakerja.svg" width="" alt="Prakerja"/></a></div>
+          <div class="d-flex justify-content-between align-items-center col-12 col-lg-auto"><a href="../index.html" style="position:relative;z-index:11"><img src="../img/logo-prakerja.svg" width="" alt="Prakerja"/></a></div>
+          <div class="header-heading fs-4 d-none d-xl-block">Statistik Penerima <span class="text-primary">Prakerja </span>2020 - 2024</div>
           <ul class="d-flex align-items-center navbar-custom">
             <li class="nav-item md-show">
               <div class="menu burger-menu" data-menu="13">
