--- a/kabupaten/index.html
+++ b/kabupaten/index.html
@@ -53,7 +53,8 @@
     <header class="pdt-header">
       <div class="container-md px-4 px-md-0">
         <div class="d-flex justify-content-between align-items-center position-relative">
-          <div class="d-flex justify-content-between align-items-center col-12 col-lg-auto"><a href="../index.html"><img src="../img/logo-prakerja.svg" width="" alt="Prakerja"></a></div>
+          <div class="d-flex justify-content-between align-items-center col-12 col-lg-auto"><a href="../index.html" style="position:relative;z-index:11"><img src="../img/logo-prakerja.svg" width="" alt="Prakerja"></a></div>
+          <div class="header-heading fs-4 d-none d-xl-block">Statistik Penerima <span class="text-primary">Prakerja </span>2020 - 2024</div>
           <ul class="d-flex align-items-center navbar-custom">
             <li class="nav-item md-show">
               <div class="menu burger-menu" data-menu="13">
