add hover effect and area in the map

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <section class="section-hero">
         <h1 class="main-heading h3">
            Statistik Penerima <span>Prakerja </span>2020 - 2024</h1>
-        <div class="container-fluid" id="maps-indonesia"></div><span class="scroll-hint"><i class="bi bi-arrow-left"> </i><span class="fs-7 ms-2">Scroll</span></span>
+        <div id="maps-indonesia" title="Arahkan kursor diluar area peta untuk scroll"></div><span class="scroll-hint"><i class="bi bi-arrow-left"> </i><span class="fs-7 ms-2">Scroll</span></span>
       </section>
       <section class="section-course py-4 pt-lg-5">
         <div class="container px-4 px-md-0">
