update title meta and description

--- a/provinsi/index.html
+++ b/provinsi/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://www.prakerja.go.id/favicon.ico" rel="shortcut icon">
-    <title>Provinsi ABC - prakerja.go.id</title>
+    <title>Statistik Program Prakerja Di Provinsi - prakerja.go.id</title>
     <meta name="description" content="Informasi statistik penerima prakerja selama periode 2020 - 2024.">
     <link rel="canonical" href="https://statistik-penerima.prakerja.go.id">
     <link rel="alternate" hreflang="id" href="https://statistik-penerima.prakerja.go.id">
@@ -18,7 +18,7 @@
     <meta property="og:url" content="https://raw.githubusercontent.com/Kartu-Prakerja/laporan-penerima/main/img/img-cover-statistik-prakerja.png">
     <meta name="twitter:card" content="https://raw.githubusercontent.com/Kartu-Prakerja/laporan-penerima/main/img/img-cover-statistik-prakerja.png">
     <meta name="twitter:site" content="">
-    <meta name="twitter:title" content="Provinsi ABC - prakerja.go.id">
+    <meta name="twitter:title" content="Statistik Program Prakerja Di Provinsi - prakerja.go.id">
     <meta name="twitter:description" content="Informasi statistik penerima prakerja selama periode 2020 - 2024.">
     <meta name="twitter:image" content="https://raw.githubusercontent.com/Kartu-Prakerja/laporan-penerima/main/img/img-cover-statistik-prakerja.png">
     <meta name="twitter:image:width" content="1200">
