update fun fact wording

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <div class="container px-4 px-md-0">
           <div class="row">
             <div class="col-12">
-              <h5 class="mb-4 text-center">Moda Pelatihan</h5>
+              <h5 class="mb-4 text-center">Jumlah Pelatihan Berdasarkan Moda Yang Dipilih Penerima</h5>
             </div>
             <div class="col-lg-6 mb-4">
               <div class="border rounded-3 p-3">
