update improvement content and text

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                   <tbody rowspan="1" colspan="11"></tbody>
                 </thead>
               </table>
+              <p class="text-end text-secondary"><i class="fw-bold">* Aktif </i><span>merupakan Penerima yang setidaknya beli minimal 1 pelatihan.</span></p>
             </div>
           </div>
         </div>
@@ -163,19 +164,19 @@
             <div class="col-lg-3 img-desil d-flex align-items-end p-3 text-start">
               <div>
                 <h4 class="display-4 text-white desil">-%</h4>
-                <h5 class="text-white">Purna Desil 1</h5>
+                <h5 class="text-white">Desil 1</h5>
               </div>
             </div>
             <div class="col-lg-3 img-difabel d-flex align-items-end p-3 text-start">
               <div>
                 <h4 class="display-4 text-white difabel">-%</h4>
-                <h5 class="text-white">Purna Difabel</h5>
+                <h5 class="text-white">Difabel</h5>
               </div>
             </div>
             <div class="col-lg-3 img-perdesaan d-flex align-items-end p-3 text-start">
               <div>
                 <h4 class="display-4 text-white vilage">-%</h4>
-                <h5 class="text-white">Purna Perdesaan</h5>
+                <h5 class="text-white">Perdesaan</h5>
               </div>
             </div>
           </div>
@@ -202,7 +203,7 @@
           </div>
         </div>
       </section>
-      <section class="section-course py-3 py-lg-5">
+      <section class="section-course py-3 py-lg-4">
         <div class="container px-4 px-md-0">
           <div class="row">
             <div class="col-12">
@@ -266,7 +267,7 @@
           </div>
         </div>
       </section>
-      <section class="section-course py-3">
+      <section class="section-course pt-3 mb-5">
         <div class="container px-4 px-md-0">
           <div class="row text-center">
             <div class="col-lg-12 mb-4">
