--- a/provinsi/index.html
+++ b/provinsi/index.html
@@ -111,7 +111,7 @@
           </div>
         </div>
       </section>
-      <section class="section-course py-4 pt-lg-5">
+      <section class="section-course py-4 pt-lg-4">
         <div class="container px-4 px-md-0">
           <div class="row text-center">
             <h4 class="custom-rfs-h4">Persebaran Penerima</h4>
@@ -142,6 +142,7 @@
                   <tbody rowspan="1" colspan="11"></tbody>
                 </thead>
               </table>
+              <p class="text-end text-secondary"><i class="fw-bold">* Aktif </i><span>merupakan Penerima yang setidaknya beli minimal 1 pelatihan.</span></p>
             </div>
           </div>
         </div>
@@ -185,7 +186,7 @@
           </div>
         </div>
       </section>
-      <section class="section-course py-3 py-lg-5">
+      <section class="section-course py-3 py-lg-4">
         <div class="container px-4 px-md-0">
           <div class="row">
             <div class="col-12">
@@ -249,7 +250,7 @@
           </div>
         </div>
       </section>
-      <section class="section-course py-3">
+      <section class="section-course pt-3 mb-5">
         <div class="container px-4 px-md-0">
           <div class="row text-center">
             <div class="col-lg-12 mb-4">
