--- a/html/provinsi/section_main_content.html
+++ b/html/provinsi/section_main_content.html
@@ -41,9 +41,13 @@
               <h4 class="mb-4 custom-rfs-h4">Profil Penerima</h4>
               <div class="col-lg-6 d-flex flex-column">
                 <div class="border p-4 d-flex rounded-3 gap-3 mb-4 h-100 align-items-center"><img src="../img/img-people.svg" alt=""/>
+                  <div class="text-start border-end pe-4 me-4">
+                    <h6 class="h1 text-primary" id="total-penerima-sk">0</h6>
+                    <p class="mb-0">Total <b>SK Penetapan</b> Program</p>
+                  </div>
                   <div class="text-start">
-                    <h6 class="h1 text-primary" id="total-penerima">18.887.737</h6>
-                    <p class="mb-0">Total Penerima Aktif Program</p>
+                    <h6 class="h1 text-primary" id="total-penerima">0</h6>
+                    <p class="mb-0">Total <b>Penerima Aktif</b> Program</p>
                   </div>
                 </div>
                 <div class="border p-4 d-flex rounded-3 mb-4 bg-map-indonesia h-100 align-items-center">
