update layout profil penerima

--- a/index.html
+++ b/index.html
@@ -116,15 +116,21 @@
         <div class="container px-4 px-md-0">
           <div class="row text-center">
             <h4 class="mb-4 custom-rfs-h4">Profil Penerima</h4>
-            <div class="col-lg-6 d-flex flex-column">
-              <div class="border p-4 d-flex rounded-3 gap-3 mb-4 h-100 align-items-center"><img src="img/img-people.svg" alt="">
-                <div class="text-start border-end pe-4 me-4">
-                  <h6 class="h1 text-primary" id="total-penerima-sk">0</h6>
-                  <p class="mb-0">Total <b>SK Penetapan</b> Program</p>
+            <div class="col-xl-6 d-flex flex-column">
+              <div class="border p-4 d-md-flex rounded-3 gap-4 mb-4 h-100 align-items-center">
+                <div class="text-start w-100"><img class="mb-2" src="img/img-people.svg" alt="" height="48">
+                  <div>
+                    <h6 class="h1 text-primary mb-0" id="total-penerima-sk">0</h6>
+                    <p class="mb-0">Total <b>SK Penetapan</b> Program</p>
+                  </div>
                 </div>
-                <div class="text-start">
-                  <h6 class="h1 text-primary" id="total-penerima">0</h6>
-                  <p class="mb-0">Total <b>Penerima Aktif</b> Program</p>
+                <div class="border-end h-100 d-none d-md-block"></div>
+                <div class="border-top w-100 d-block d-md-none my-3"></div>
+                <div class="text-start w-100"><img class="mb-2" src="img/img-people2.svg" alt="" height="48">
+                  <div>
+                    <h6 class="h1 text-orange mb-0" id="total-penerima">0</h6>
+                    <p class="mb-0">Total <b>Penerima Aktif</b> Program</p>
+                  </div>
                 </div>
               </div>
               <div class="border p-4 d-flex rounded-3 mb-4 bg-map-indonesia h-100 align-items-center">
