update information change to statistik.prakerja.go.id

--- a/kabupaten/index.html
+++ b/kabupaten/index.html
@@ -6,8 +6,8 @@
     <link href="https://www.prakerja.go.id/favicon.ico" rel="shortcut icon">
     <title>Statistik Program Prakerja di Kabupaten - prakerja.go.id</title>
     <meta name="description" content="Informasi statistik penerima prakerja selama periode 2020 - 2024.">
-    <link rel="canonical" href="https://statistik-penerima.prakerja.go.id">
-    <link rel="alternate" hreflang="id" href="https://statistik-penerima.prakerja.go.id">
+    <link rel="canonical" href="https://statistik.prakerja.go.id">
+    <link rel="alternate" hreflang="id" href="https://statistik.prakerja.go.id">
     <meta property="og:image" content="https://raw.githubusercontent.com/Kartu-Prakerja/laporan-penerima/main/img/img-cover-statistik-prakerja.png">
     <meta property="og:image:width" content="400">
     <meta property="og:image:height" content="627">
@@ -171,7 +171,7 @@
               <div class="border p-4 d-flex rounded-3 mb-4 bg-map-indonesia h-100 align-items-center">
                 <div class="text-start">
                   <h6 class="h1 text-primary">100%</h6>
-                  <p class="mb-0">Mencakup seluruh wilayah kecamatan di Kabupaten/Kota <b class="province-name"></b>.</p>
+                  <p class="mb-0">Mencakup seluruh wilayah kecamatan di <b class="province-name text-capitalize"></b>.</p>
                 </div>
               </div>
             </div>
