--- a/provinsi/index.html
+++ b/provinsi/index.html
@@ -6,8 +6,8 @@
     <link href="https://www.prakerja.go.id/favicon.ico" rel="shortcut icon">
     <title>Statistik Program Prakerja Di Provinsi - prakerja.go.id</title>
     <meta name="description" content="Informasi statistik penerima prakerja selama periode 2020 - 2024.">
-    <link rel="canonical" href="https://statistik-penerima.prakerja.go.id">
-    <link rel="alternate" hreflang="id" href="https://statistik-penerima.prakerja.go.id">
+    <link rel="canonical" href="https://statistik.prakerja.go.id">
+    <link rel="alternate" hreflang="id" href="https://statistik.prakerja.go.id">
     <meta property="og:image" content="https://raw.githubusercontent.com/Kartu-Prakerja/laporan-penerima/main/img/img-cover-statistik-prakerja.png">
     <meta property="og:image:width" content="400">
     <meta property="og:image:height" content="627">
