--- a/html/kabupaten/section_main_content.html
+++ b/html/kabupaten/section_main_content.html
@@ -59,7 +59,7 @@
                 <div class="border p-4 d-flex rounded-3 mb-4 bg-map-indonesia h-100 align-items-center">
                   <div class="text-start">
                     <h6 class="h1 text-primary">100%</h6>
-                    <p class="mb-0">Mencakup seluruh wilayah kecamatan di Kabupaten/Kota <b class="province-name"></b>.</p>
+                    <p class="mb-0">Mencakup seluruh wilayah kecamatan di <b class="province-name text-capitalize"></b>.</p>
                   </div>
                 </div>
               </div>
